removed unused code
todo:
get rid of "link" attribute in @Nested in favor of @MySqlField column attribute
unification of terms (coulmName vs fieldName)
refactor tests
readme