@@ -9,7 +9,7 @@ import java.util.stream.Stream;
 
 class Banana {
     @Test
-    void meh(){
+    void meh() {
         E e = new E(11111);
         E e1 = new E(11121);
         E e2 = new E(11112);
@@ -17,26 +17,50 @@ class Banana {
         E e4 = new E(11113);
         E e5 = new E(11133);
 
-        D d = new D(1111, new ArrayList<>() {{add(e);}});
-        D d1 = new D(1111, new ArrayList<>() {{add(e1);}});
-        D d2 = new D(1112, new ArrayList<>() {{add(e2);}});
-        D d3 = new D(1112, new ArrayList<>() {{add(e3);}});
-        D d4 = new D(1113, new ArrayList<>() {{add(e4);}});
-        D d5 = new D(1113, new ArrayList<>() {{add(e5);}});
+        D d = new D(1111, new ArrayList<>() {{
+            add(e);
+        }});
+        D d1 = new D(1111, new ArrayList<>() {{
+            add(e1);
+        }});
+        D d2 = new D(1112, new ArrayList<>() {{
+            add(e2);
+        }});
+        D d3 = new D(1112, new ArrayList<>() {{
+            add(e3);
+        }});
+        D d4 = new D(1113, new ArrayList<>() {{
+            add(e4);
+        }});
+        D d5 = new D(1113, new ArrayList<>() {{
+            add(e5);
+        }});
 
         C c = new C(111, "sss", d);
         C cc = new C(111, "sss", d1);
-        A a = new A(1, new B(11,  new ArrayList<>(){{add(c);}}, false), "s");
-        A aa = new A(1, new B(11,  new ArrayList<>(){{add(cc);}}, false), "s");
+        A a = new A(1, new B(11, new ArrayList<>() {{
+            add(c);
+        }}, false), "s");
+        A aa = new A(1, new B(11, new ArrayList<>() {{
+            add(cc);
+        }}, false), "s");
         C c1 = new C(112, "sss2222", d2);
 
         C cc1 = new C(112, "sss2222", d3);
-        A a1 = new A(1, new B(11, new ArrayList<>(){{add(c1);}}, false), "s");
-        A aa1 = new A(1, new B(11, new ArrayList<>(){{add(cc1);}}, false), "s");
+        A a1 = new A(1, new B(11, new ArrayList<>() {{
+            add(c1);
+        }}, false), "s");
+        A aa1 = new A(1, new B(11, new ArrayList<>() {{
+            add(cc1);
+        }}, false), "s");
         C c2 = new C(113, "sss3333", d4);
         C cc2 = new C(113, "sss3333", d5);
-        A a2 = new A(1, new B(11,  new ArrayList<>(){{add(c2);}}, false), "s");
-        A aa2 = new A(1, new B(11,  new ArrayList<>(){{add(cc2);}}, false), "s");
+        A a2 = new A(1, new B(11, new ArrayList<>() {{
+            add(c2);
+        }}, false), "s");
+        A aa2 = new A(1, new B(11, new ArrayList<>() {{
+            add(cc2);
+        }}, false), "s");
 //        A aaa = new A(2, new B(21, new ArrayList<>(), true), "2s");
 
         D exD = new D(1111, List.of(e, e1));
@@ -48,101 +72,45 @@ class Banana {
         A ex = new A(1, new B(11, List.of(exC, exC2, exC3), false), "s");
 
         List<A> aaaas = Stream.of(a, aa, a1, aa1, a2, aa2).toList();
-        Assertions.assertEquals(List.of(ex), A.mergeListWithFurtherDescendantsContainingLists(aaaas));
+        Assertions.assertEquals(List.of(ex), first(aaaas));
     }
 
-    private void printGroup(List<A> aaaas){
-        Map<Integer, List<A>> aGroupedById = aaaas.stream().collect(Collectors.groupingBy(ax -> ax.id));
-
-        for (Map.Entry<Integer, List<A>> groupedAs : aGroupedById.entrySet()) {
-            List<B> listOfBsInA = groupedAs.getValue().stream().map(v -> v.hasList).toList();
-
-            Map<Integer, List<B>> bGroupedById = listOfBsInA.stream().collect(Collectors.groupingBy(someA -> someA.id));
-
-            for (Map.Entry<Integer, List<B>> groupedBs : bGroupedById.entrySet()) {
-
-                //B has a LIST of C objects, however C has a CHILD with a LIST also
-                //we need to deduplicate all C objects because of this by iterating them and merging the lists in the child object
-                Map<Integer, List<C>> cGroupedById = groupedBs.getValue().stream().flatMap(someB -> someB.listOfCs.stream()).collect(Collectors.groupingBy(someC -> someC.id));
-
-                Map<Integer, List<C>> cGrouped = new HashMap<>();
-                for (B b : groupedBs.getValue()) {
-                    for (C listOfC : b.listOfCs) {
-                        if (cGrouped.containsKey(listOfC.id)){
-                            cGrouped.get(listOfC.id).add(listOfC);
-                        } else {
-                            cGrouped.put(listOfC.id, new ArrayList<>(){{add(listOfC);}});
-                        }
-
-                    }
-                }
-
-
-                for (Map.Entry<Integer, List<C>> groupedCs : cGroupedById.entrySet()) {
-                    //these objects have a LIST in them AND are at the bottom of the chain
-                    // so their lists just need to be merged
-                    List<D> listOfDsInC = groupedCs.getValue().stream().map(v->v.hasListInside).toList();
-
-                    //take one of the objects with a list to merge the lists into
-                    D originalD = listOfDsInC.get(0);
-
-                    //linkedHashSet so the merged list has no duplicates
-                    LinkedHashSet<E> mergedListOfEs = new LinkedHashSet<>(originalD.listOfEs);
-                    listOfDsInC.forEach(dx-> mergedListOfEs.addAll(dx.listOfEs));
-                    originalD.listOfEs = new ArrayList<>(mergedListOfEs);
-
-                    //take the first object from the group and update the list object it contains
-                    C originalC = groupedCs.getValue().get(0);
-                    originalC.hasListInside = originalD;
-
-                    //reduce the group to the updated object
-                    cGroupedById.put(groupedCs.getKey(), List.of(originalC));
-                }
-
-                List<C> deduplicateListOfC = cGroupedById.values().stream().flatMap(Collection::stream).toList();
-
-                //take the first object from the group and update the list object it contains
-                B originalB = groupedBs.getValue().get(0);
-                originalB.listOfCs = deduplicateListOfC;
-                //reduce the group to the updated object
-                bGroupedById.put(groupedBs.getKey(), List.of(originalB));
-            }
-
-            B originalB = listOfBsInA.get(0);
-            LinkedHashSet<C> valueToSet = new LinkedHashSet<>(originalB.listOfCs);
-
-//            bGroupedById.values().stream().flatMap(Collection::stream).forEach(bx-> valueToSet.addAll(bx.listOfCs));
-
-            originalB.listOfCs = bGroupedById.values().stream().flatMap(Collection::stream).flatMap(someB -> someB.listOfCs.stream()).collect(Collectors.toList());
-            A e122 = groupedAs.getValue().get(0);
-            e122.hasList = originalB;
-            aGroupedById.put(groupedAs.getKey(), List.of(e122));
+    /**
+     * uvijek pocetna tocka, moram prvo grupirat sve iz liste pa ih napose pospajat
+     * <p>
+     * svaki objekt ima funkciju kao pocetnu tocku, ako objekt ima potomka sa listom onda pocetna tocka zove groupA ili groupB
+     */
+    private List<A> first(List<A> toMerge) {
+        Map<Integer, List<A>> aGroupedById = new LinkedHashMap<>();
+        for (A ax : toMerge) {
+            aGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
         }
 
-        System.out.println(aGroupedById.get(1).get(0));
+        for (Map.Entry<Integer, List<A>> groupedAs : aGroupedById.entrySet()) {
+            A groupedA = A.second(groupedAs.getValue());      //todo metoda grupiranja ovisi je li objekt ima listu ili ima potomka sa listom
+            aGroupedById.put(groupedAs.getKey(), List.of(groupedA));
+        }
+
+        return aGroupedById.values().stream().flatMap(Collection::stream).toList();
     }
 
-    static class A {//has a descendant with a list
+    interface ID {
+        int getId();
+    }
+
+    static class A implements ID {//has a descendant with a list
         private final int id;
         private B hasList;
         private final String s;
 
-        static List<A> mergeListWithFurtherDescendantsContainingLists(List<A>aToGroup){//entry point always
-            Map<Integer, List<A>> aGroupedById = new LinkedHashMap<>();
-            for (A ax : aToGroup) {
-                aGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
-            }
-            for (Map.Entry<Integer, List<A>> groupedAs : aGroupedById.entrySet()) {
-                A originalA = groupedAs.getValue().get(0);
-                A newA = new A(originalA.id, originalA.hasList, originalA.s);
-                newA.hasList = B.groupElementWithListInIt(groupedAs.getValue().stream().map(v -> v.hasList).toList());
-                aGroupedById.put(groupedAs.getKey(), List.of(newA));
-            }
-
-            return aGroupedById.values().stream().flatMap(Collection::stream).toList();
+        //updating a single element
+        static A second(List<A> toGroup) {
+            A originalA = toGroup.get(0);
+            originalA.hasList = B.first(toGroup.stream().map(v -> v.hasList).toList()).get(0);
+            return originalA;
         }
 
-        A(int id, B hasList, String s){
+        A(int id, B hasList, String s) {
             this.id = id;
             this.hasList = hasList;
             this.s = s;
@@ -176,25 +144,56 @@ class Banana {
             result = 31 * result + (s != null ? s.hashCode() : 0);
             return result;
         }
+
+        @Override
+        public int getId() {
+            return id;
+        }
     }
-    static class B {
+
+    static class B implements ID {
         private final int id;
         private List<C> listOfCs;
         private final boolean b;
 
-        static B groupElementWithListInIt(List<B> listOfBsInA){
-            Map<Integer, List<B>> bGroupedById = listOfBsInA.stream().collect(Collectors.groupingBy(someA -> someA.id));
-            for (Map.Entry<Integer, List<B>> groupedBs : bGroupedById.entrySet()) {
-                B originalB = groupedBs.getValue().get(0);
-                bGroupedById.put(groupedBs.getKey(), List.of(new B(originalB.id, C.mergeListWithFurtherDescendantsContainingLists(groupedBs), originalB.b)));
+//        static B groupedB(List<B> toGroup){
+//            Map<Integer, List<B>> bGroupedById = new LinkedHashMap<>();
+//            for (B ax : toGroup) {
+//                bGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
+//            }
+//
+//            for (Map.Entry<Integer, List<B>> groupedBs : bGroupedById.entrySet()) {
+//                B originalB = groupedBs.getValue().get(0);
+//                originalB.listOfCs =  C.first(groupedBs.getValue().stream().flatMap(b->b.listOfCs.stream()).collect(Collectors.toList()));
+//                bGroupedById.put(groupedBs.getKey(), List.of(originalB));
+//            }
+//            B originalB = toGroup.get(0);
+//            originalB.listOfCs = bGroupedById.values().stream().flatMap(Collection::stream).flatMap(someB -> someB.listOfCs.stream()).collect(Collectors.toList());
+//            return originalB;
+//        }
+
+        static List<B> first(List<B> toGroup) {
+            Map<Integer, List<B>> bGroupedById = new LinkedHashMap<>();
+            for (B ax : toGroup) {
+                bGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
             }
-            B originalB = listOfBsInA.get(0);
-            B newB = new B(originalB.id, originalB.listOfCs, originalB.b);
-            newB.listOfCs = bGroupedById.values().stream().flatMap(Collection::stream).flatMap(someB -> someB.listOfCs.stream()).collect(Collectors.toList());
-            return newB;
+
+            for (Map.Entry<Integer, List<B>> groupedBs : bGroupedById.entrySet()) {
+                B originalB = B.second(groupedBs.getValue());
+                bGroupedById.put(groupedBs.getKey(), List.of(originalB));
+            }
+
+            return bGroupedById.values().stream().flatMap(Collection::stream).toList();
         }
 
-        B(int id, List<C> listOfCs, boolean b){
+        //updating a list
+        static B second(List<B> toGroup) {
+            B originalB = toGroup.get(0);
+            originalB.listOfCs = C.first(toGroup.stream().flatMap(b -> b.listOfCs.stream()).collect(Collectors.toList()));
+            return originalB;
+        }
+
+        B(int id, List<C> listOfCs, boolean b) {
             this.id = id;
             this.listOfCs = listOfCs;
             this.b = b;
@@ -228,47 +227,44 @@ class Banana {
             result = 31 * result + (b ? 1 : 0);
             return result;
         }
+
+        @Override
+        public int getId() {
+            return id;
+        }
     }
-    static class C {
+
+    static class C implements ID {
         private final int id;
         private final String s;
 
         private D hasListInside;
 
-        C(int id, String s, D hasListInside){
+        C(int id, String s, D hasListInside) {
             this.id = id;
             this.s = s;
             this.hasListInside = hasListInside;
         }
 
-        static List<C> mergeListWithFurtherDescendantsContainingLists(Map.Entry<Integer, List<B>> groupedBs){
+        static List<C> first(List<C> toMerge) {//todo isto kao mergeA
             Map<Integer, List<C>> cGroupedById = new LinkedHashMap<>();
-            for (B someB : groupedBs.getValue()) {
-                for (C someC : someB.listOfCs) {
-                    List<C> mappedList;
-                    if (cGroupedById.containsKey(someC.id)){
-                        mappedList = cGroupedById.get(someC.id);
-                    } else {
-                        mappedList = new ArrayList<>();
-                        cGroupedById.put(someC.id, mappedList);
-                    }
-
-                    mappedList.add(someC);
-                }
+            for (C ax : toMerge) {
+                cGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
             }
 
             for (Map.Entry<Integer, List<C>> groupedCs : cGroupedById.entrySet()) {
-
-                //take the first object from the group and update the list object it contains
-                C originalC = groupedCs.getValue().get(0);
-                C newC = new C(originalC.id,  originalC.s, originalC.hasListInside);
-                newC.hasListInside = D.groupElementWithListInIt(groupedCs.getValue().stream().map(v -> v.hasListInside).toList());
-
-                //reduce the group to the updated object
-                cGroupedById.put(groupedCs.getKey(), List.of(newC));
+                C groupedC = C.second(groupedCs.getValue());
+                cGroupedById.put(groupedCs.getKey(), List.of(groupedC));
             }
 
             return cGroupedById.values().stream().flatMap(Collection::stream).toList();
+        }
+
+        //updating single element
+        static C second(List<C> toMerge) {
+            C originalC = toMerge.get(0);
+            originalC.hasListInside = D.first(toMerge.stream().map(v -> v.hasListInside).toList()).get(0);
+            return originalC;
         }
 
         @Override
@@ -299,30 +295,53 @@ class Banana {
             result = 31 * result + (hasListInside != null ? hasListInside.hashCode() : 0);
             return result;
         }
+
+        @Override
+        public int getId() {
+            return id;
+        }
     }
-    static class D {
+
+    static class D implements ID {
         private final int id;
         private List<E> listOfEs;
 
-        D(int id, List<E> listOfEs){
+        D(int id, List<E> listOfEs) {
             this.id = id;
             this.listOfEs = listOfEs;
         }
 
-        public static D groupElementWithListInIt(List<D> listOfDsInC) {
-            Map<Integer, List<D>> dGroupedById = new LinkedHashMap<>();
-            for (D someD : listOfDsInC) {
-                dGroupedById.computeIfAbsent(someD.id, k -> new ArrayList<>()).add(someD);
+//        static D groupedD(List<D> toGroup) {
+//            Map<Integer, List<D>> bGroupedById = toGroup.stream().collect(Collectors.groupingBy(someA -> someA.id));
+//            for (Map.Entry<Integer, List<D>> groupedBs : bGroupedById.entrySet()) {
+//                D originalB = groupedBs.getValue().get(0);
+//                originalB.listOfEs = E.mergeE(groupedBs.getValue().stream().flatMap(b -> b.listOfEs.stream()).collect(Collectors.toList()));
+//                bGroupedById.put(groupedBs.getKey(), List.of(originalB));
+//            }
+//            D originalB = toGroup.get(0);
+//            originalB.listOfEs = bGroupedById.values().stream().flatMap(Collection::stream).flatMap(someB -> someB.listOfEs.stream()).collect(Collectors.toList());
+//            return originalB;
+//        }
+
+        static List<D> first(List<D> toGroup) {
+            Map<Integer, List<D>> bGroupedById = new LinkedHashMap<>();
+            for (D ax : toGroup) {
+                bGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
             }
 
-            for (Map.Entry<Integer, List<D>> groupedDs : dGroupedById.entrySet()) {
-                D originalD = groupedDs.getValue().get(0);
-                dGroupedById.put(groupedDs.getKey(), List.of(new D(originalD.id, E.mergeListNoFurtherDescendantsWithList(groupedDs))));
+            for (Map.Entry<Integer, List<D>> groupedBs : bGroupedById.entrySet()) {
+                D originalB = D.second(groupedBs.getValue());
+                bGroupedById.put(groupedBs.getKey(), List.of(originalB));
             }
-            D originalD = listOfDsInC.get(0);
-            D newD = new D(originalD.id, originalD.listOfEs);
-            newD.listOfEs = dGroupedById.values().stream().flatMap(Collection::stream).flatMap(someB -> someB.listOfEs.stream()).collect(Collectors.toList());
-            return newD;
+
+            return bGroupedById.values().stream().flatMap(Collection::stream).toList();
+        }
+
+        //updating a list
+        static D second(List<D> toGroup) {
+            D originalB = toGroup.get(0);
+            originalB.listOfEs = E.first(toGroup.stream().flatMap(b -> b.listOfEs.stream()).collect(Collectors.toList()));
+            return originalB;
         }
 
         @Override
@@ -350,20 +369,57 @@ class Banana {
             result = 31 * result + (listOfEs != null ? listOfEs.hashCode() : 0);
             return result;
         }
+
+        @Override
+        public int getId() {
+            return id;
+        }
     }
-    static class E {
+
+    static class E implements ID {
         private final int id;
-        E(int id){
+
+        E(int id) {
             this.id = id;
         }
 
-        public static List<E> mergeListNoFurtherDescendantsWithList(Map.Entry<Integer, List<D>> groupedDs) { //always end of the line
-            HashSet<E> list = new LinkedHashSet<>();
-            for (D x : groupedDs.getValue()) {
-                list.addAll(x.listOfEs);
-            }
-            return new ArrayList<>(list);
+//        static List<E> mergeE(List<E> toMerge) {//todo isto kao mergeA i kao mergeC
+//            Map<Integer, List<E>> eGroupedById = new LinkedHashMap<>();
+//            for (E ax : toMerge) {
+//                eGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
+//            }
+//
+//            for (Map.Entry<Integer, List<E>> groupedCs : eGroupedById.entrySet()) {
+//                E groupedC = E.groupedE(groupedCs.getValue());
+//                eGroupedById.put(groupedCs.getKey(), List.of(groupedC));
+//            }
+//
+//            return eGroupedById.values().stream().flatMap(Collection::stream).toList();
+//        }
+
+        static E groupedE(List<E> toMerge) {
+            return toMerge.get(0);
         }
+
+        static List<E> first(List<E> toGroup) {
+            Map<Integer, List<E>> bGroupedById = new LinkedHashMap<>();
+            for (E ax : toGroup) {
+                bGroupedById.computeIfAbsent(ax.id, k -> new ArrayList<>()).add(ax);
+            }
+
+            for (Map.Entry<Integer, List<E>> groupedBs : bGroupedById.entrySet()) {
+                E originalB = E.second(groupedBs.getValue());
+                bGroupedById.put(groupedBs.getKey(), List.of(originalB));
+            }
+
+            return bGroupedById.values().stream().flatMap(Collection::stream).toList();
+        }
+
+        //end of the line
+        private static E second(List<E> toMerge) {
+            return toMerge.get(0);
+        }
+
 
         @Override
         public boolean equals(Object o) {
@@ -385,6 +441,11 @@ class Banana {
             return "E{" +
                    "id=" + id +
                    '}';
+        }
+
+        @Override
+        public int getId() {
+            return id;
         }
     }
 }
